# gomoku

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Makefile  docker-compose.yml  pull_request_template.md  rustfmt.toml
ai/: __init__.py  ai.py  board.py  bridge.py  captures.py  constants.py  gomoku_ai.py  heuristic.py  rules.py  search.py  test.py  types.py
client/: Dockerfile  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/about/: page.tsx
client/app/ai/: page.tsx
client/app/local/: page.tsx
client/app/online/: page.tsx
client/components/gomoku/: Board.tsx  Cell.tsx  EndgameDialog.tsx  GamePage.tsx  Header.tsx  LoadingModal.tsx  RightPanel.tsx  SettingsDialog.tsx
client/components/ui/: button.tsx
client/lib/adapters/: gameClient.ts
client/lib/gomoku/: game.ts  types.ts
src/: bridge.rs  main.rs
src/events/: event.rs  find_match.rs  game_start.rs  mod.rs  move_hint_request.rs  player_leave.rs  player_move.rs  undo.rs
src/events/room/: board.rs  event.rs  game_ended.rs  game_started.rs  game_turn.rs  mod.rs  win.rs
src/game/: capture.rs  matchmaker.rs  mod.rs  room.rs  session.rs  win.rs
src/game/state/: mod.rs  state.rs  turn.rs  types.rs
src/shared/: config.rs  types.rs
